fixed display issues detected on mobile views

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,3 +115,21 @@ footer {
         display: none;
     }
 }
+
+@media only screen and (max-width: 355px) {
+    nav .brand-logo {
+        font-size: 1.25rem;
+    }
+}
+
+@media only screen and (max-width: 290px) {
+    .main-head {
+        display: none;
+    }
+    .brewname {
+        display:none;
+    }
+    nav .brand-logo {
+        font-size: 10px;
+    }
+}
